--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jshint": "^2.6.0"
   },
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint testing/testing.js"
+    //"test": "./node_modules/jshint/bin/jshint testing/testing.js"
+    "test": "./node_modules/jshint/bin/jshint calendar.js"
   }
 }
