--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   },
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint calendar.js",
-    "minify": "minify.js"
+    "test2": "./node_modules/jshint/bin/jshint calendar.min.js"
   }
 }
