--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "mocha": "^4.0"
   },
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint calendar.js",
-    "mocha": "mocha"
+    "test": "./node_modules/mocha/bin/mocha testing/test.js"
   }
 }
